@@ -1,4 +1,4 @@
-/* readkeysapps.c [ 0.8.7 ] */
+/* readkeysapps.c [ 0.8.8 ] */
 
 void read_keys_file() {
     FILE *keyfile ;
@@ -101,7 +101,12 @@ void read_keys_file() {
                         keys[keycount].myfunction = terminate;
                         get_value();
                         keys[keycount].arg.i = strtol(dummy, NULL, 10);
-                    } else if(strcmp(dummy, "quit") == 0) keys[keycount].myfunction = quit;
+                    } else if(strcmp(dummy, "sticky_win") == 0) {
+                        keys[keycount].myfunction = sticky_win;
+                        get_value();
+                        keys[keycount].arg.i = strtol(dummy, NULL, 10);
+                    } else if(strcmp(dummy, "unsticky_win") == 0) keys[keycount].myfunction = unsticky_win;
+                    else if(strcmp(dummy, "quit") == 0) keys[keycount].myfunction = quit;
                     else if(strcmp(dummy, "next_win") == 0) keys[keycount].myfunction = next_win;
                     else if(strcmp(dummy, "prev_win") == 0) keys[keycount].myfunction = prev_win;
                     else if(strcmp(dummy, "swap_master") == 0) keys[keycount].myfunction = swap_master;
