@@ -1,3 +1,8 @@
+24/11/15
+  Added option to sticky the focused window on unfocused desktops
+   with a keyboard shortcut
+  moveresize popped windows in fullscreen mode on desktop change
+
 23/11/15
   Fix for popping a window back with one window in fullscreen mode
 
